objects/CMOS_BU_IP_Project__c.object
<CustomObject>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Initial Review / Sizing</fullName>
                </value>
                <value>
                    <fullName>Approve Sizing Scope</fullName>
                </value>
                <value>
                    <fullName>Procurement Review</fullName>
                </value>
                <value>
                    <fullName>Procurement Decision</fullName>
                </value>
                <value>
                    <fullName>Implementation In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Initial Review</fullName>
                    <isActive>false</isActive>
                    <label>Initial Review</label>
                </value>
                <value>
                    <fullName>Review-Sizing Scope</fullName>
                    <isActive>false</isActive>
                    <label>Review-Sizing Scope</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standards_Compliance__c</fullName>
        <label>Standards Compliance</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standby_Current__c</fullName>
        <label>Standby Current</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standby_Power_Based_on_X1_and_X2__c</fullName>
        <label>Standby Power Based on X1 and X2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Maintenance_Fee_to_End_User__c</fullName>
        <label>Support &amp; Maintenance Fee (to End User)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Maintenance_Fee_to_GF__c</fullName>
        <label>Support &amp; Maintenance Fee (to GF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tapless_library__c</fullName>
        <label>Tapless library</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_IO_Height__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target IO Height</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Instance_Size_Area__c</fullName>
        <label>Target Instance Size Area</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Instance_Size_Dyn_Pwr_uW_MHz__c</fullName>
        <inlineHelpText>typical TT/1.0V/25C</inlineHelpText>
        <label>Target Instance Size/Dyn Pwr uW/MHz</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Instance_Size_Frequency__c</fullName>
        <inlineHelpText>worst case ss/0.9V/0C</inlineHelpText>
        <label>Target Instance Size/Frequency</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Instance_Size_Target_Access_Time__c</fullName>
        <inlineHelpText>worst case ss/0.9V/0C</inlineHelpText>
        <label>Target Instance Size/Target Access Time</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_MPW_for_Test_Chip_Tape_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target MPW for Test Chip Tape-Out</label>
        <referenceTo>MPW_Change_Request__c</referenceTo>
        <relationshipName>IP_Requests_For_GS11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_PDK_Comments__c</fullName>
        <label>Target PDK Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_PDK_Version__c</fullName>
        <label>Target PDK Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Process_Node__c</fullName>
        <label>Target Process Node</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Process_Geometry__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7LP</fullName>
                </value>
                <value>
                    <fullName>14LPP-XL</fullName>
                </value>
                <value>
                    <fullName>22FDX</fullName>
                </value>
                <value>
                    <fullName>28SLP</fullName>
                </value>
                <value>
                    <fullName>28HPP</fullName>
                </value>
                <value>
                    <fullName>28LPSe</fullName>
                </value>
                <value>
                    <fullName>40LP</fullName>
                </value>
                <value>
                    <fullName>55LPX</fullName>
                </value>
                <value>
                    <fullName>55LPe</fullName>
                </value>
                <value>
                    <fullName>55TGO</fullName>
                </value>
                <value>
                    <fullName>65G</fullName>
                </value>
                <value>
                    <fullName>65LP</fullName>
                </value>
                <value>
                    <fullName>65LPe</fullName>
                </value>
                <value>
                    <fullName>65CMOS-10SF</fullName>
                </value>
                <value>
                    <fullName>65RFCMOS-10RFe</fullName>
                </value>
                <value>
                    <fullName>90CMOS-9SF</fullName>
                </value>
                <value>
                    <fullName>90HPSIGE-9HP</fullName>
                </value>
                <value>
                    <fullName>90RFCMOS-9RF</fullName>
                </value>
                <value>
                    <fullName>110TS</fullName>
                </value>
                <value>
                    <fullName>130BCD</fullName>
                </value>
                <value>
                    <fullName>130BCDlite</fullName>
                </value>
                <value>
                    <fullName>130G</fullName>
                </value>
                <value>
                    <fullName>130HP</fullName>
                </value>
                <value>
                    <fullName>130HPSIGE-8HP</fullName>
                </value>
                <value>
                    <fullName>130HPSIGE-8WL</fullName>
                </value>
                <value>
                    <fullName>130HV</fullName>
                </value>
                <value>
                    <fullName>130LP</fullName>
                </value>
                <value>
                    <fullName>130LP_EE</fullName>
                </value>
                <value>
                    <fullName>130LV</fullName>
                </value>
                <value>
                    <fullName>130RFCMOS-8RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Comments_Specifications__c</fullName>
        <label>Technical Comments/Specifications</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Technical_Comments__c</fullName>
        <label>Technical Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_Interface__c</fullName>
        <label>User Interface</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vt_s_Required__c</fullName>
        <label>Vt&apos;s Required</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wirebond_or_Flip_Chip__c</fullName>
        <label>Wirebond or Flip Chip</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_NAND_Delay__c</fullName>
        <label>X1 NAND Delay</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>CMOS BU IP Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Target_Process_Node__c</columns>
        <columns>Process_Geometry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IPP-{000000}</displayFormat>
        <label>CMOS BU IP Project</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMOS BU IP Projects</pluralLabel>
    <recordTypes>
        <fullName>AMS</fullName>
        <active>true</active>
        <description>Analog Mixed Signal</description>
        <label>AMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>IO</fullName>
        <active>true</active>
        <description>IO library</description>
        <label>IO</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOGIC</fullName>
        <active>true</active>
        <description>Logic library</description>
        <label>LOGIC</label>
    </recordTypes>
    <recordTypes>
        <fullName>MEMORY</fullName>
        <active>true</active>
        <description>Memory compiler</description>
        <label>MEMORY</label>
    </recordTypes>
    <recordTypes>
        <fullName>NVM</fullName>
        <active>true</active>
        <description>Non Volatile Memory</description>
        <label>NVM</label>
    </recordTypes>
    <recordTypes>
        <fullName>PHY</fullName>
        <active>true</active>
        <description>SerDes, DDR, USB, etc.</description>
        <label>PHY</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PDK_Availability_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($Setup.IntegrationUsers__c.Skip_Validation_Rule__c), OR(ISBLANK( PDK_Availability_Date__c ), ISBLANK( Target_PDK_Comments__c )) , ISPICKVAL( Target_PDK_Version__c , &apos;Other&apos;) )</errorConditionFormula>
        <errorMessage>PDK Availability Date and Comments must be filled when Target PDK Version is Other.</errorMessage>
    </validationRules>
</CustomObject>